# Slooper

./: ._.gitignore  ._GStreamerTest.py  ._README.md  ._StdInTest.py  GStreamerTest.py  InstallSlooperWithRemote.py  LICENSE.txt  README.md  RemoteVideo.py  StdInTest.py  Videos.json
Slooper/: ._VideoClient.cpp  ._VideoServer.cpp  CMakeLists.txt  TestClient.cpp  TestServer.cpp  TestVideoPlayer.cpp  VideoPlayer.cpp  VideoServer.cpp
Slooper/Networking/: Socket.cpp  Socket.hpp  SocketAddress.hpp  TCPAcceptor.cpp  TCPAcceptor.hpp  TCPSocket.cpp  TCPSocket.hpp
Slooper/VideoPlayer/: VideoPlayer.hpp
Slooper/VideoPlayerGStreamer/: ._CMakeLists.txt  ._GVideoPlayer.cpp  ._VideoPlayer.py  CMakeLists.txt  GVideoPlayer.cpp  VideoPlayer.py
VideoPlayer/: Makefile  VideoPlayer.cpp
